--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
         <h2>Get In Touch</h2>
         <div class="contact-info">
             <p>📧 Email: <a href="mailto:goldmanfx.001@gmail.com">goldmanfx.001@gmail.com</a></p>
-            <p>💼 Twitter: <a href="x.com/goldmancreates">goldman</a></p>
-            <p>🐙 GitHub: <a href="github.com/goldcode001">@goldman</a></p>
+            <p>💼 Twitter: <a href="https://x.com/goldmancreates">goldman</a></p>
+            <p>🐙 GitHub: <a href="https://github.com/goldcode001">@goldman</a></p>
             <p>🔗 My tool: <a href="https://just-one-minute-goldman.netlify.app/">Just one minute tool</a></p>
             <p>🌐 Location: Remote / Worldwide</p>
         </div>
